--- a/css/styles.css
+++ b/css/styles.css
@@ -493,7 +493,6 @@ p.description-focus:before {
 /* Intro */
 .intro {
     padding-top: 165px;
-    padding-bottom: 144px;
     position: relative;
     z-index: 1;
     display: flex;
@@ -548,6 +547,10 @@ p.description-focus:before {
 
 /* About Project */
 
+.about-project {
+    padding-top: 144px;
+}
+
 .about-project__wrapper {
     display: flex;
     justify-content: space-between;
@@ -598,7 +601,7 @@ p.description-focus:before {
 /* Developed AVO */
 
 .developed-avo {
-    padding: 182px 0 116px;
+    padding: 182px 0 0;
 }
 
 .developed-avo__heading {
@@ -806,6 +809,11 @@ p.description-focus:before {
 }
 
 /* Benefits */
+
+.benefits {
+    padding-top: 116px;
+}
+
 .benefits__top-desc {
     background: radial-gradient(
             90.16% 143.01% at 15.32% 21.04%,
@@ -2270,8 +2278,6 @@ h2.head:after,
             rgba(21, 21, 21, 0.3) 60%,
             rgba(255, 255, 255, 0.3) 100%
     );
-    -webkit-mask: linear-gradient(#fff 0 0) content-box, linear-gradient(#fff 0 0);
-    -webkit-mask-composite: xor;
     mask-composite: exclude;
     z-index: -1;
 }
@@ -2610,11 +2616,11 @@ h2.head:after,
     }
 
     .about-project {
-        padding: 0 15px;
+        padding: 144px 15px 0;
     }
 
     .developed-avo {
-        padding: 140px 15px 100px;
+        padding: 140px 15px 0;
     }
 
     .developed-avo__item--big .developed-avo__item__image img {
@@ -2765,6 +2771,10 @@ h2.head:after,
 }
 
 @media (max-width: 768px) {
+    .benefits__top-desc {
+        padding: 13px;
+    }
+
     .block-name {
         font-size: 16px;
     }
@@ -2933,9 +2943,15 @@ h2.head:after,
 }
 
 @media (max-width: 576px) {
-    .intro {
-        padding-bottom: 255px;
+    .about-project {
+        padding-top: 80px;
     }
+
+    .intro {
+        padding-bottom: 175px;
+    }
+
+
 
     .intro > img {
         bottom: -150px;
