--- a/css/styles.css
+++ b/css/styles.css
@@ -977,13 +977,9 @@ p.description-focus:before {
     border: 2px solid rgba(152, 249, 255, 0.4);
 }
 
-.team__item.empty img {
-    width: 134px;
-}
-
 .team__item.empty .team__img {
-    height: 100%;
-    width: 100%;
+    height: 134px;
+    width: 134px;
     margin-bottom: 0;
 }
 
